// shared/proto/agent.proto
syntax = "proto3";
package agent;

message AgentRequest {
  string user_query = 1;
  bool debug_mode = 2;
}

message AgentReply {
  string final_answer = 1;
  string context_used = 2;
  string sources = 3;
  string execution_graph = 4;
}

message GetMetricsRequest {}

message MetricsResponse {
  string tool_usage = 1;
  string tool_errors = 2;
  int32 llm_calls = 3;
  double avg_response_time = 4;
}

service AgentService {
  rpc QueryAgent(AgentRequest) returns (AgentReply);
  rpc GetMetrics(GetMetricsRequest) returns (MetricsResponse);
}